--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: ruby
 rvm:
+  - 2.1.8
+  - 2.2.4
   - 2.3.0
 before_install: gem install bundler -v 1.11.2
+notifications:
+  email:
+    on_sucess: never
+    on_failure: never
