--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,4 @@ rvm:
   - 2.3.0
 before_install: gem install bundler -v 1.11.2
 notifications:
-  email:
-    on_sucess: never
-    on_failure: never
+  email: false
