--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: ruby
+
 rvm:
-  - 2.1.8
-  - 2.2.4
-  - 2.3.0
-before_install: gem install bundler -v 1.11.2
+  - 2.2.5
+  - 2.3.1
+
+before_install:
+  - gem update --system
+  - gem update bundler
+
 notifications:
   email: false
